FIX removed default right-alignment from input/display elements

--- a/Facades/js/themes/jeasyui.exface.css
+++ b/Facades/js/themes/jeasyui.exface.css
@@ -39,6 +39,7 @@ ul.nav_menu a:hover {color: white; font-weight: bold; text-decoration: none; dis
 /* Inputs */
 .exf-labeled-item {display: inline-block; height: 100%; vertical-align: middle;}
 .exf-input, .exf-display {box-sizing: border-box; padding:4px; text-align:right;}
+.exf-input > *, .exf-display > * {text-align:initial;}
 .exf-input label {margin: 0 3px; display: inline-block; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; vertical-align: middle;}
 .exf-input textarea {vertical-align:middle;border: 1px solid #c3d9e0; tab-size: 4}
 .exf-display .exf-labeled-item {text-align: left; font-weight: bold; padding-left: 3px;}
@@ -235,10 +236,10 @@ pre.sf-dump .sf-dump-private, pre.sf-dump .sf-dump-public, pre.sf-dump .sf-dump-
 .easyui-dialog.panel-body {width: auto !important;}
 .dialog-button {width: auto !important;}
 .accordion-body {width: auto !important;}
+.panel-body {width: auto !important;}
 
 /* TOAST UI Editor */
 .tui-tooltip {z-index: 999999 !important;}
-.exf-input-markdown > .markdown-editor {text-align: left;}
 
 /* InputTags */
 .exf-tag {margin: 4px 0px;}
